@@ -17,6 +17,7 @@
     * OpenAPI tests fix - better openapi example
     * Request.hostname contains only hostname without port
     * Request.timestamp - set as soon as possible
+    * empty FieldStorage did't raise exception
 
 ==== 2.2.0 ====
     * openapi after_request example fix
